--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/index.html.twig
@@ -4,16 +4,16 @@
 {% block toolbar %}
   <ul id="toolbar">
     <li>
-      <a href="#" class="remove" title="{% trans %}Remove selected{% endtrans %}">{% trans %}Remove selected{% endtrans %}</a>
+      <a href="#" title="{% trans %}Remove selected{% endtrans %}"><i class="icon-trash"></i></a>
     </li>
     <li>
-      <a href="#" class="print" title="{% trans %}Print selected{% endtrans %}">{% trans %}Print selected{% endtrans %}</a>
+      <a href="#" title="{% trans %}Print selected{% endtrans %}"><i class="icon-print"></i></a>
     </li>
     <li>
-      <a href="#" class="pdf" title="{% trans %}Download as PDF{% endtrans %}">{% trans %}Download as PDF{% endtrans %}</a>
+      <a href="#" title="{% trans %}Download as PDF{% endtrans %}"><i class="icon-download-alt"></i></a>
     </li>
     <li>
-      <a href="#" class="email" title="{% trans %}Email selected{% endtrans %}">{% trans %}Email selected{% endtrans %}</a>
+      <a href="#" title="{% trans %}Email selected{% endtrans %}"><i class="icon-envelope"></i></a>
     </li>
   </ul>
 {% endblock %}
