--- a/web/css/bundle/dashboard.less
+++ b/web/css/bundle/dashboard.less
@@ -11,7 +11,7 @@
         
         table {
             width:auto;
-            font-size:@basefont * 1.2 !important;
+            font-size:@baseFontSize * 1.2 !important;
             float:left;
             margin:0;
             background-color:@white;
@@ -37,10 +37,10 @@
     //
     
     .dashboard-listing {
-        margin:@basefont * 2 0 0;
+        margin:@baseFontSize * 2 0 0;
         
         h2 {
-            margin:0 0 @basefont * 1;
+            margin:0 0 @baseFontSize * 1;
         }
     }
 }
